methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:20: error: too many arguments for method faireV: ()Unit
  faireV(4)
        ^